feat: integrate video.js for enhanced video playback functionality
- Added video.js CSS to angular.json for styling.
- Updated package.json and package-lock.json to include video.js and its dependencies.
- Created VideoplayerComponent for video playback with resolution options.
- Implemented resolution selection feature in VideoplayerComponent.
- Modified MainpageComponent and VideoDetailComponent to open VideoplayerComponent on video play.
- Updated styles.scss to include custom styles for video resolution menu.
- Enhanced footer and header components to manage navigation and visibility based on routes.

--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "src/favicon.ico"
             ],
             "styles": [
+              "node_modules/video.js/dist/video-js.css",
               "src/styles.scss",
               "src/styles.css"
             ],
@@ -88,6 +89,7 @@
               "src/favicon.ico"
             ],
             "styles": [
+              "node_modules/video.js/dist/video-js.css",
               "src/styles.scss",
               "src/styles.css"
             ],
