--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "video.js": "^8.23.3",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
