feat: update package dependencies and improve video player functionality
- Added `videojs-contrib-quality-levels` dependency to enhance video quality selection.
- Refactored `AuthInterceptor` to use `HttpRequest<unknown>` for better type safety.
- Changed default selected video in `MainpageComponent` to the first video in the response.
- Updated styles in `videoplayer.component.scss` for improved UI and hover effects on quality buttons.
- Enhanced `VideoplayerComponent` to support quality level selection with a new quality menu.
- Removed unnecessary resolution button code and replaced it with a quality toggle.
- Simplified `auth.service.ts` by removing unused imports.
- Changed the title in `index.html` from "VideoflixFrontend" to "Videoflix".

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "node_modules/video.js/dist/video-js.css",
+              "./node_modules/video.js/dist/video-js.min.css",
               "src/styles.scss",
               "src/styles.css"
             ],
@@ -89,7 +89,7 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "node_modules/video.js/dist/video-js.css",
+              "./node_modules/video.js/dist/video-js.min.css",
               "src/styles.scss",
               "src/styles.css"
             ],
